--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "evergreen-ui": "^7.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "semantic-ui-react": "^2.1.4",
